[gd_scene load_steps=4 format=3 uid="uid://c6h15vi3l4y8a"]

[ext_resource type="Texture2D" uid="uid://bhcc4rm4jh8hv" path="res://assets/star_small.png" id="1_46ao5"]
[ext_resource type="Script" uid="uid://rdr14xcxynrr" path="res://star.gd" id="2_e2x7v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e2x7v"]
radius = 0.05

[node name="Star" type="Sprite3D"]
billboard = 1
texture_filter = 0
texture = ExtResource("1_46ao5")
script = ExtResource("2_e2x7v")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_e2x7v")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
